# rapidroots

./: LICENSE  pyproject.toml  requirements.txt  setup.py
benchmark/families/: sympy_family_benchmark.py
benchmark/utils/validation/: validation_benchmark.py
rapidroots/core/: dispatcher.py
rapidroots/utils/: utils.py
src/rapidroots/families/: base.py  dispatcher.py  registry.py  sympy_family.py
src/rapidroots/solvers/: base.py  bisection.py  mixin.py
src/rapidroots/utils/: bulk_bracket.py  function_utils.py  grid_bracket.py  intelligent_bracket.py  utils.py
src/rapidroots/utils/validation/: _core.py  _enum.py
tests/: pytest.ini  test_auto_bracket_search.py  test_bisection_scalar.py  test_bisection_vector.py  test_bulk_bracket.py  test_condition_fucntion.py  test_grid_bracket.py  test_intelligent_bracket_search.py  test_universal_functions_dispatcher.py  test_validate_bracket.py
tests/families/: test_dispatcher.py  test_register.py  test_sympy_family.py
tests/utils/validation/: core_test.py
