[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rapidroots"
version = "0.1.0"
description = "Modular AI framework for symbolic runtime testing"
authors = [
    { name="Shaun Quezon", email="your.email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest",
    "simpy",
    "numba",
    # Add any other runtime dependencies here
]

[project.urls]
Homepage = "https://github.com/yourname/rapidroots"
Repository = "https://github.com/yourname/rapidroots"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
