[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rapidroots"
version = "0.1.0"
description = "Symbolic function dispatcher"
authors = [{ name = "Shaun Quezon", email = "you@example.com" }]
requires-python = ">=3.8"
dependencies = ["pytest"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
